# semantic_analyse_service

./: .env  .gitignore  Dockerfile  README.md  compose.yaml  compose_build.yaml  pyproject.toml
app/: logic.py  main.py  model.py  prepare_data.py  prepare_db.py  pydantic_models.py  routes.py  settings.py
data/: dataset.xlsx  out.csv
scripts/: service_up.sh
